Making changes to address PMD and FindBugs issues